# NetLibrariesTests

./: CMakeLists.txt  README.md
SDL_net/: CMakeLists.txt
SDL_net/src/: define.hpp  main.cpp  testing.hpp
SDL_net/src/data/: libraries.cpp  libraries.hpp
SDL_net/src/internet/: destination.hpp  internet.cpp  internet.hpp  reciepient.hpp
SDL_net/src/internet/messages/: confirmedMessage.cpp  confirmedMessage.hpp  getPacket.cpp  getPacket.hpp  message.cpp  message.hpp  swap.cpp  swap.hpp
src/: main.cpp
winSock2/src/: testing.hpp
winSock2/src/data/: array.hpp  exceptions.hpp  libraries.hpp  logger.hpp
winSock2/src/internet/: destination.hpp  socket.cpp
winSock2/src/internet/messages/: getPacket.cpp
winsock2/: CMakeLists.txt  main_old.cpp
winsock2/src/: define.hpp  internetCodes.hpp  main.cpp
winsock2/src/data/: libraries.cpp  time.hpp
winsock2/src/internet/: destination.cpp  destination.hpp  internet.cpp  internet.hpp  library.cpp  reciepent.cpp  reciepient.hpp  socket.cpp
winsock2/src/internet/messages/: getPacket.cpp  getPacket.hpp  indexesArray.cpp  indexesArray.hpp  message.cpp  message.hpp  swap.cpp  swap.hpp
